--- a/_posts/9-14-2018.md
+++ b/_posts/9-14-2018.md
@@ -39,3 +39,6 @@ Also, I'm still in the MUN community, and finally, my friend in our organizing c
 have only 1,5 year on my karma know) will be able to become chief or SecGen myself. I know, I have leadership skills, so for this year I'm 
 sure, I will try to take place of UnderSecGen ('cause I need step up in carreer, right?).
 So many thoughts, and this is not even the end! Gonna write the rest in a second post, thanks for reading:*:-)))
+![Me and Kendrick]({{ "/images/me-and-kendrick.jpg" | absolute_url }})
+![Kendrick alone]({{ "/images/kendrick-on-a-sofa.jpg" | absolute_url }})
+![Our office]({{ "/images/lightapp-office.jpg" | absolute_url }})
